src/partials/elements/_typography.sass
@import ../../variables/elements/typography.variables

html
    font-size: $fontSize
body
    line-height: $lineHeight
    
p:not(:first-child)
    margin-top   : $typography_pVerticalMargin
    margin-bottom: $typography_pVerticalMargin

p:last-child:not(:first-child)
    margin-bottom: 0
    
p:first-child
    margin-top: 0
    
p:last-child:first-child
    margin-top   : 0
    margin-bottom: 0
    
*
    font-family   : $typography_fontFamily
    box-sizing    : $typography_boxSizing
    letter-spacing: $typography_letterSpacing
    
a
    color          : $linkColor
    text-decoration: $linkUnderline

a:hover
    color          : $linkHoverColor
    text-decoration: $linkHoverUnderline

a:active
    color          : $linkActiveColor
    text-decoration: $linkActiveUnderline

